--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -16,3 +16,4 @@ v.5.3.9
 - reworked a lot of TAG CODE, datapack devs warning
 - chained spells now do less dmg per chain, up to configurable minimum
 - profession stations now fill up the output slots BUT any recipes with more than 1 output will throw items on the ground, so use hoppers anyway
+- should fix move speed stat crash
