The close nove's localization might be wrong
But I can't find it in game to try to fix it. So leave it as it until next check

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -340,129 +340,59 @@
 	"item.mmorpg.soul_extractor.mythic": "神话级装备灵魂提取器",
 	"item.mmorpg.soul_extractor.rare": "稀有级装备灵魂提取器",
 	"item.mmorpg.soul_extractor.uncommon": "精良级装备灵魂提取器",
-	"item.mmorpg.stat_soul.family.armor.common": "\u00A77Crafted Common Armor Soul",
-	"item.mmorpg.stat_soul.family.armor.epic": "\u00A7dCrafted Epic Armor Soul",
-	"item.mmorpg.stat_soul.family.armor.legendary": "\u00A76Crafted Legendary Armor Soul",
-	"item.mmorpg.stat_soul.family.armor.mythic": "\u00A75Crafted Mythic Armor Soul",
-	"item.mmorpg.stat_soul.family.armor.rare": "\u00A7bCrafted Rare Armor Soul",
-	"item.mmorpg.stat_soul.family.armor.uncommon": "\u00A7aCrafted Uncommon Armor Soul",
-	"item.mmorpg.stat_soul.family.jewelry.common": "\u00A77Crafted Common Jewelry Soul",
-	"item.mmorpg.stat_soul.family.jewelry.epic": "\u00A7dCrafted Epic Jewelry Soul",
-	"item.mmorpg.stat_soul.family.jewelry.legendary": "\u00A76Crafted Legendary Jewelry Soul",
-	"item.mmorpg.stat_soul.family.jewelry.mythic": "\u00A75Crafted Mythic Jewelry Soul",
-	"item.mmorpg.stat_soul.family.jewelry.rare": "\u00A7bCrafted Rare Jewelry Soul",
-	"item.mmorpg.stat_soul.family.jewelry.uncommon": "\u00A7aCrafted Uncommon Jewelry Soul",
-	"item.mmorpg.stat_soul.family.offhand.common": "\u00A77Crafted Common Offhand Soul",
-	"item.mmorpg.stat_soul.family.offhand.epic": "\u00A7dCrafted Epic Offhand Soul",
-	"item.mmorpg.stat_soul.family.offhand.legendary": "\u00A76Crafted Legendary Offhand Soul",
-	"item.mmorpg.stat_soul.family.offhand.mythic": "\u00A75Crafted Mythic Offhand Soul",
-	"item.mmorpg.stat_soul.family.offhand.rare": "\u00A7bCrafted Rare Offhand Soul",
-	"item.mmorpg.stat_soul.family.offhand.uncommon": "\u00A7aCrafted Uncommon Offhand Soul",
-	"item.mmorpg.stat_soul.family.weapon.common": "\u00A77Crafted Common Weapon Soul",
-	"item.mmorpg.stat_soul.family.weapon.epic": "\u00A7dCrafted Epic Weapon Soul",
-	"item.mmorpg.stat_soul.family.weapon.legendary": "\u00A76Crafted Legendary Weapon Soul",
-	"item.mmorpg.stat_soul.family.weapon.mythic": "\u00A75Crafted Mythic Weapon Soul",
-	"item.mmorpg.stat_soul.family.weapon.rare": "\u00A7bCrafted Rare Weapon Soul",
-	"item.mmorpg.stat_soul.family.weapon.uncommon": "\u00A7aCrafted Uncommon Weapon Soul",
+	"item.mmorpg.stat_soul.family.armor.common": "\u00A77人造普通级护甲灵魂",
+	"item.mmorpg.stat_soul.family.armor.epic": "\u00A7d人造史诗级护甲灵魂",
+	"item.mmorpg.stat_soul.family.armor.legendary": "\u00A76人造传说级护甲灵魂",
+	"item.mmorpg.stat_soul.family.armor.mythic": "\u00A75人造神话级护甲灵魂",
+	"item.mmorpg.stat_soul.family.armor.rare": "\u00A7b人造稀有级护甲灵魂",
+	"item.mmorpg.stat_soul.family.armor.uncommon": "\u00A7a人造精良级护甲灵魂",
+	"item.mmorpg.stat_soul.family.jewelry.common": "\u00A77人造普通级珠宝灵魂",
+	"item.mmorpg.stat_soul.family.jewelry.epic": "\u00A7d人造史诗级珠宝灵魂",
+	"item.mmorpg.stat_soul.family.jewelry.legendary": "\u00A76人造传说级珠宝灵魂",
+	"item.mmorpg.stat_soul.family.jewelry.mythic": "\u00A75人造神话级珠宝灵魂",
+	"item.mmorpg.stat_soul.family.jewelry.rare": "\u00A7b人造稀有级珠宝灵魂",
+	"item.mmorpg.stat_soul.family.jewelry.uncommon": "\u00A7a人造精良级珠宝灵魂",
+	"item.mmorpg.stat_soul.family.offhand.common": "\u00A77人造普通级副手灵魂",
+	"item.mmorpg.stat_soul.family.offhand.epic": "\u00A7d人造史诗级副手灵魂",
+	"item.mmorpg.stat_soul.family.offhand.legendary": "\u00A76人造传说级副手灵魂",
+	"item.mmorpg.stat_soul.family.offhand.mythic": "\u00A75人造神话级副手灵魂",
+	"item.mmorpg.stat_soul.family.offhand.rare": "\u00A7b人造稀有级副手灵魂",
+	"item.mmorpg.stat_soul.family.offhand.uncommon": "\u00A7a人造精良级副手灵魂",
+	"item.mmorpg.stat_soul.family.weapon.common": "\u00A77人造普通级武器灵魂",
+	"item.mmorpg.stat_soul.family.weapon.epic": "\u00A7d人造史诗级武器灵魂",
+	"item.mmorpg.stat_soul.family.weapon.legendary": "\u00A76人造传说级武器灵魂",
+	"item.mmorpg.stat_soul.family.weapon.mythic": "\u00A75人造神话级武器灵魂",
+	"item.mmorpg.stat_soul.family.weapon.rare": "\u00A7b人造稀有级武器灵魂",
+	"item.mmorpg.stat_soul.family.weapon.uncommon": "\u00A7a人造精良级武器灵魂",
 	"item.mmorpg.tp_back": "回归珍珠",
 	
 	"_comment": " [CATEGORY]: MISC - NAMES",
-	
-	
-	"_comment": " [CATEGORY]: AFFIXES - NAMES",
-	
-	"mmorpg.affix.archeologists": "Archeologist's",
-	"mmorpg.affix.azure": "Azure",
-	"mmorpg.affix.boundless": "Boundless",
-	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
-	"mmorpg.affix.chaos_res": "Of the Snake",
-	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
-	"mmorpg.affix.crit_prefix": "Critical",
-	"mmorpg.affix.desolation": "Desolation",
-	"mmorpg.affix.energetic": "Energetic",
-	"mmorpg.affix.energy_reg": "Invirogating",
-	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
-	"mmorpg.affix.fire_res": "Of the Drake",
-	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
-	"mmorpg.affix.fire_wep_dmg": "Scorched",
-	"mmorpg.affix.focused": "Focused",
-	"mmorpg.affix.glimmering": "Glimmering",
-	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
-	"mmorpg.affix.heal_crit_prefix": "Truthful",
-	"mmorpg.affix.heal_suff": "Of Restoration",
-	"mmorpg.affix.immortal": "Immortal",
-	"mmorpg.affix.item_both_armor": "Reinforced",
-	"mmorpg.affix.item_both_dodge": "Scaled",
-	"mmorpg.affix.item_both_ms": "Fortified",
-	"mmorpg.affix.item_flat_armor": "Reinforced",
-	"mmorpg.affix.item_flat_dodge": "Scaled",
-	"mmorpg.affix.item_flat_ms": "Fortified",
-	"mmorpg.affix.item_perc_armor": "Reinforced",
-	"mmorpg.affix.item_perc_dodge": "Scaled",
-	"mmorpg.affix.item_perc_ms": "Fortified",
-	"mmorpg.affix.lightning_res": "Of the Yeti",
-	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
-	"mmorpg.affix.mana_reg": "Soothing",
-	"mmorpg.affix.mana_thief": "Mana Thief's",
-	"mmorpg.affix.ms_reg": "Stabilizing",
-	"mmorpg.affix.of_affluence": "Of Affluence",
-	"mmorpg.affix.of_azure_skies": "Of Azure Skies",
-	"mmorpg.affix.of_brutality": "Of Brutality",
-	"mmorpg.affix.of_consumption": "Of Consumption",
-	"mmorpg.affix.of_devastation": "Of Devastation",
-	"mmorpg.affix.of_energy": "Of Energy",
-	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
-	"mmorpg.affix.of_gluttony": "Of Gluttony",
-	"mmorpg.affix.of_less_cd": "Of Repetition",
-	"mmorpg.affix.of_mana": "Of Mana",
-	"mmorpg.affix.of_pene": "Of Penetration",
-	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
-	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
-	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
-	"mmorpg.affix.of_the_sky": "Of the Sky",
-	"mmorpg.affix.of_the_titan": "Of the Titan",
-	"mmorpg.affix.of_the_troll": "Of The Troll",
-	"mmorpg.affix.of_the_wind": "Of the Wind",
-	"mmorpg.affix.of_treasure": "Of Treasure",
-	"mmorpg.affix.of_vampirism": "Of Vampirism",
-	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
-	"mmorpg.affix.precise": "Precise",
-	"mmorpg.affix.promised": "Promised",
-	"mmorpg.affix.scavanger": "Scavanger",
-	"mmorpg.affix.seraphim": "Seraphim's",
-	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
-	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
-	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
-	"mmorpg.affix.true_hit": "True Hit",
-	"mmorpg.affix.vampiric": "Vampiric",
-	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
-	"mmorpg.affix.water_res": "Of the Storm",
-	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
-	"mmorpg.affix.water_wep_dmg": "Chilled",
-	"mmorpg.affix.wep_item_both": "Miserable",
-	"mmorpg.affix.wep_item_flat": "Deadly",
-	"mmorpg.affix.wep_item_perc": "Cruel",
-	
-	"_comment": " [CATEGORY]: AFFIXES - NAMES",
-	
+
 	
 	"_comment": " [CATEGORY]: SPELLS - NAMES",
 	
+	"mmorpg.asc_class.hunter": "猎人",
+	"mmorpg.asc_class.minstrel": "吟游诗人",
+	"mmorpg.asc_class.shaman": "萨满",
+	"mmorpg.asc_class.sorcerer": "法师",
+	"mmorpg.asc_class.warlock": "术士",
+	"mmorpg.asc_class.warrior": "战士",
 	"mmorpg.aura.armor": "护甲光环",
 	"mmorpg.aura.chaos_ailment": "混沌附魔光环",
 	"mmorpg.aura.chaos_damage": "混沌伤害光环",
-	"mmorpg.aura.chaos_res": "混沌护盾光环",
+	"mmorpg.aura.chaos_res": "混沌屏障光环",
 	"mmorpg.aura.cold_ailment": "冰霜附魔光环",
 	"mmorpg.aura.cold_damage": "冰霜伤害光环",
-	"mmorpg.aura.cold_res": "寒冰护盾光环",
+	"mmorpg.aura.cold_res": "寒冰屏障光环",
 	"mmorpg.aura.dodge": "闪避光环",
-	"mmorpg.aura.ele_res": "元素护盾光环",
+	"mmorpg.aura.ele_res": "元素屏障光环",
 	"mmorpg.aura.energy_reg": "活力回复光环",
 	"mmorpg.aura.fire_ailment": "火焰附魔光环",
 	"mmorpg.aura.fire_damage": "火焰伤害光环",
-	"mmorpg.aura.fire_res": "炎焰护盾光环",
+	"mmorpg.aura.fire_res": "炎焰屏障光环",
+	"mmorpg.aura.guardian": "守护光环",
 	"mmorpg.aura.health_reg": "生命恢复光环",
-	"mmorpg.aura.light_res": "雷鸣护盾光环",
+	"mmorpg.aura.light_res": "雷鸣屏障光环",
 	"mmorpg.aura.lightning_ailment": "闪电附魔光环",
 	"mmorpg.aura.lightning_damage": "闪电伤害光环",
 	"mmorpg.aura.magic_shield": "魔法护盾光环",
@@ -475,7 +405,7 @@
 	"mmorpg.spell.arrow_storm": "箭矢风暴",
 	"mmorpg.spell.arrow_totem": "箭矢图腾",
 	"mmorpg.spell.astral_totem": "星界图腾",
-	"mmorpg.spell.awaken_mana": "醒来魔力",
+	"mmorpg.spell.awaken_mana": "提神醒脑",
 	"mmorpg.spell.black_hole": "黑洞",
 	"mmorpg.spell.boomerang": "回旋镖",
 	"mmorpg.spell.chain_lightning": "链状闪电",
