--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -367,7 +367,7 @@
 	"item.mmorpg.tp_back": "回归珍珠",
 	
 	"_comment": " [CATEGORY]: MISC - NAMES",
-
+	
 	
 	"_comment": " [CATEGORY]: SPELLS - NAMES",
 	
@@ -408,12 +408,13 @@
 	"mmorpg.spell.awaken_mana": "提神醒脑",
 	"mmorpg.spell.black_hole": "黑洞",
 	"mmorpg.spell.boomerang": "回旋镖",
-	"mmorpg.spell.chain_lightning": "链状闪电",
+	"mmorpg.spell.chain_lightning": "连锁闪电",
 	"mmorpg.spell.chaos_totem": "混沌图腾",
 	"mmorpg.spell.charge": "冲锋",
 	"mmorpg.spell.charged_bolt": "充能箭矢",
 	"mmorpg.spell.chilling_field": "冰霜领域",
 	"mmorpg.spell.chilling_touch": "冰寒之触",
+	"mmorpg.spell.circle_of_healing": "治疗之圈",
 	"mmorpg.spell.close_nova": "近战新星",
 	"mmorpg.spell.curse_of_agony": "痛苦诅咒",
 	"mmorpg.spell.curse_of_despair": "绝望诅咒",
@@ -422,51 +423,58 @@
 	"mmorpg.spell.draconic_blood": "龙血",
 	"mmorpg.spell.entangling_seed": "缠根种子",
 	"mmorpg.spell.execute": "处决",
+	"mmorpg.spell.explode_minions": "引爆召唤物",
 	"mmorpg.spell.explosive_arrow": "爆炸箭矢",
 	"mmorpg.spell.fire_nova": "火焰新星",
 	"mmorpg.spell.fire_trap": "火焰陷阱",
 	"mmorpg.spell.fireball": "火球",
 	"mmorpg.spell.flame_strike": "烈焰打击",
-	"mmorpg.spell.frost_flower": "寒霜花",
-	"mmorpg.spell.frost_nova": "冰霜新星",
+	"mmorpg.spell.frost_flower": "霜冻图腾",
+	"mmorpg.spell.frost_nova": "霜冻新星",
 	"mmorpg.spell.frost_trap": "冰霜陷阱",
-	"mmorpg.spell.frostball": "冰球",
-	"mmorpg.spell.frozen_orb": "冰封球体",
+	"mmorpg.spell.frostball": "寒冰碎片",
+	"mmorpg.spell.frozen_orb": "寒冰之球",
 	"mmorpg.spell.gale_wind": "疾风",
-	"mmorpg.spell.gong_strike": "锣击",
+	"mmorpg.spell.garden_of_thorns": "荆棘花园",
+	"mmorpg.spell.gong_strike": "震撼打击",
 	"mmorpg.spell.healing_aura": "治疗光环",
-	"mmorpg.spell.heart_of_ice": "冰心",
+	"mmorpg.spell.heart_of_ice": "冰霜之心",
 	"mmorpg.spell.hunter_potion": "猎手药水",
-	"mmorpg.spell.ice_comet": "冰之陨星",
+	"mmorpg.spell.ice_comet": "寒冰彗星",
 	"mmorpg.spell.lightning_nova": "闪电新星",
 	"mmorpg.spell.lightning_spear": "闪电长矛",
-	"mmorpg.spell.mage_circle": "法阵",
-	"mmorpg.spell.magma_flower": "熔火兰",
+	"mmorpg.spell.lightning_totem": "闪电图腾",
+	"mmorpg.spell.mage_circle": "法师之环",
+	"mmorpg.spell.magma_flower": "熔岩图腾",
 	"mmorpg.spell.meteor": "陨石",
 	"mmorpg.spell.meteor_arrow": "流星箭",
 	"mmorpg.spell.minion_explosion": "爆炸扈从",
-	"mmorpg.spell.nature_balm": "自然馈赠",
-	"mmorpg.spell.poison_ball": "毒球",
-	"mmorpg.spell.poison_cloud": "毒雾",
+	"mmorpg.spell.pet_basic": "基础宠物攻击",
+	"mmorpg.spell.poison_ball": "毒液冲击",
+	"mmorpg.spell.poison_cloud": "剧毒云雾",
 	"mmorpg.spell.poison_trap": "毒素陷阱",
-	"mmorpg.spell.power_chord": "音爆",
-	"mmorpg.spell.pull": "拉拽",
-	"mmorpg.spell.quickdraw": "快手",
-	"mmorpg.spell.recoil_shot": "后坐力射击",
-	"mmorpg.spell.refresh": "回复",
+	"mmorpg.spell.power_chord": "强力和弦",
+	"mmorpg.spell.pull": "无情铁手",
+	"mmorpg.spell.quickdraw": "快速装弹",
+	"mmorpg.spell.recoil_shot": "反冲射击",
+	"mmorpg.spell.refresh": "刷新",
 	"mmorpg.spell.rejuv_totem": "回春图腾",
+	"mmorpg.spell.rejuvenation": "回春",
 	"mmorpg.spell.resonance": "共鸣",
-	"mmorpg.spell.return_summons": "召回召唤兽",
+	"mmorpg.spell.return_summons": "召回召唤物",
+	"mmorpg.spell.ritardando": "渐缓音",
 	"mmorpg.spell.shooting_star": "流星",
 	"mmorpg.spell.shred": "撕裂",
 	"mmorpg.spell.smoke_bomb": "烟雾弹",
 	"mmorpg.spell.song_of_perseverance": "坚定赞歌",
 	"mmorpg.spell.song_of_valor": "勇气赞歌",
 	"mmorpg.spell.song_of_vigor": "活力赞歌",
+	"mmorpg.spell.spider_basic": "蜘蛛宠物攻击",
 	"mmorpg.spell.summon_cold_golem": "召唤冰霜魔像",
 	"mmorpg.spell.summon_fire_golem": "召唤火焰魔像",
 	"mmorpg.spell.summon_lightning_golem": "召唤闪电魔像",
-	"mmorpg.spell.summon_skeleton_army": "召唤骷髅军团",
+	"mmorpg.spell.summon_skeleton_army": "召唤骷髅",
+	"mmorpg.spell.summon_spider": "召唤蜘蛛",
 	"mmorpg.spell.summon_spirit_wolf": "召唤幽狼",
 	"mmorpg.spell.summon_zombie": "召唤僵尸",
 	"mmorpg.spell.taunt": "嘲讽",
@@ -490,20 +498,26 @@
 	"mmorpg.support_gem.crit_damage": "暴击伤害支援宝石",
 	"mmorpg.support_gem.crit_dmg_less_non_crit_dmg": "自信毁灭支援宝石",
 	"mmorpg.support_gem.dot_damage": "持续伤害支援宝石",
+	"mmorpg.support_gem.effect_duration": "状态持续时间支援宝石",
 	"mmorpg.support_gem.electrify_chance": "感电几率支援宝石",
 	"mmorpg.support_gem.energy_on_hit": "命中获得活力支援宝石",
 	"mmorpg.support_gem.fire_damage": "火焰伤害支援宝石",
 	"mmorpg.support_gem.fire_pene": "火焰穿透支援宝石",
 	"mmorpg.support_gem.freeze_chance": "冰冻几率支援宝石",
+	"mmorpg.support_gem.gmp": "Greater Multiple Projectiles Support Gem",
+	"mmorpg.support_gem.gmp_barrage": "Greater Barrage Projectiles Support Gem",
 	"mmorpg.support_gem.heal_at_low": "及时照料辅助宝石",
 	"mmorpg.support_gem.health_on_hit": "命中获得生命支援宝石",
 	"mmorpg.support_gem.inc_heal": "治疗增强支持宝石",
 	"mmorpg.support_gem.lightning_damage": "闪电伤害支援宝石",
 	"mmorpg.support_gem.lightning_pene": "闪电穿透支援宝石",
+	"mmorpg.support_gem.lmp": "Lesser Multiple Projectiles Support Gem",
+	"mmorpg.support_gem.lmp_barrage": "Lesser Barrage Projectiles Support Gem",
 	"mmorpg.support_gem.magic_shield_on_hit": "命中获得魔护支援宝石",
 	"mmorpg.support_gem.mana_on_hit": "命中获得魔力支援宝石",
 	"mmorpg.support_gem.mana_saver_dmg": "魔力保护支援宝石",
 	"mmorpg.support_gem.melee_damage": "近战伤害支援宝石",
+	"mmorpg.support_gem.minion_threat": "Minion Threat Support Gem",
 	"mmorpg.support_gem.physical_damage": "物理伤害支援宝石",
 	"mmorpg.support_gem.physical_pene": "物理穿透支援宝石",
 	"mmorpg.support_gem.plus_aoe": "范围扩大支援宝石",
