support gems finished
Next: affix and remove ONEOFAKIND genre

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -504,26 +504,27 @@
 	"mmorpg.support_gem.fire_damage": "火焰伤害支援宝石",
 	"mmorpg.support_gem.fire_pene": "火焰穿透支援宝石",
 	"mmorpg.support_gem.freeze_chance": "冰冻几率支援宝石",
-	"mmorpg.support_gem.gmp": "Greater Multiple Projectiles Support Gem",
-	"mmorpg.support_gem.gmp_barrage": "Greater Barrage Projectiles Support Gem",
+	"mmorpg.support_gem.gmp": "分裂射击4支援宝石",
+	"mmorpg.support_gem.gmp_barrage": "弹幕射击4支援宝石",
 	"mmorpg.support_gem.heal_at_low": "及时照料辅助宝石",
 	"mmorpg.support_gem.health_on_hit": "命中获得生命支援宝石",
 	"mmorpg.support_gem.inc_heal": "治疗增强支持宝石",
 	"mmorpg.support_gem.lightning_damage": "闪电伤害支援宝石",
 	"mmorpg.support_gem.lightning_pene": "闪电穿透支援宝石",
-	"mmorpg.support_gem.lmp": "Lesser Multiple Projectiles Support Gem",
-	"mmorpg.support_gem.lmp_barrage": "Lesser Barrage Projectiles Support Gem",
+	"mmorpg.support_gem.lmp": "分裂射击2支援宝石",
+	"mmorpg.support_gem.lmp_barrage": "弹幕射击2支援宝石",
 	"mmorpg.support_gem.magic_shield_on_hit": "命中获得魔护支援宝石",
 	"mmorpg.support_gem.mana_on_hit": "命中获得魔力支援宝石",
 	"mmorpg.support_gem.mana_saver_dmg": "魔力保护支援宝石",
 	"mmorpg.support_gem.melee_damage": "近战伤害支援宝石",
-	"mmorpg.support_gem.minion_threat": "Minion Threat Support Gem",
+	"mmorpg.support_gem.minion_threat": "召唤物威胁值支援宝石",
 	"mmorpg.support_gem.physical_damage": "物理伤害支援宝石",
 	"mmorpg.support_gem.physical_pene": "物理穿透支援宝石",
 	"mmorpg.support_gem.plus_aoe": "范围扩大支援宝石",
 	"mmorpg.support_gem.poison_chance": "中毒几率支援宝石",
 	"mmorpg.support_gem.proc_freeze": "冰霜触发支援宝石",
 	"mmorpg.support_gem.proc_shock": "感电支援宝石",
+	"mmorpg.support_gem.proj_speed": "弹射物加速支援宝石",
 	"mmorpg.support_gem.ranged_damage": "远程伤害支援宝石",
 	"mmorpg.support_gem.rare_cooldown": "冷却减少支援宝石",
 	"mmorpg.support_gem.rare_mana_eff": "魔力效率支援宝石",
@@ -532,6 +533,8 @@
 	"mmorpg.support_gem.spell_damage_no_crit": "抑制毁灭支援宝石",
 	"mmorpg.support_gem.summon_damage": "召唤伤害支援宝石",
 	"mmorpg.support_gem.summon_duration": "召唤持续时间支援宝石",
+	"mmorpg.support_gem.summon_health": "召唤物生命支援宝石",
+	"mmorpg.support_gem.threat": "威胁值支援宝石",
 	"mmorpg.support_gem.totem_damage": "图腾伤害辅助宝石",
 	"mmorpg.support_gem.totem_dmg_cdr": "图腾准备辅助宝石",
 	"mmorpg.support_gem.water_pene": "冰霜穿透支援宝石",
@@ -1508,7 +1511,7 @@
 	"mmorpg.stat.sword_damage": "剑伤害",
 	"mmorpg.stat.technique_cdr": "战技冷却减少",
 	"mmorpg.stat.technique_spell_dmg": "战技伤害",
-	"mmorpg.stat.threat_generated": "生成的威胁值",
+	"mmorpg.stat.threat_generated": "威胁值产生",
 	"mmorpg.stat.total_damage": "总伤害",
 	"mmorpg.stat.totem_cdr": "图腾技能冷却减少",
 	"mmorpg.stat.totem_duration": "图腾持续时间",
