Delete one of a kind strings

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -545,27 +545,25 @@
 	"_comment": " [CATEGORY]: AFFIXES - NAMES",
 	
 	"mmorpg.affix.archeologists": "考古家的",
-	"mmorpg.affix.armored_mobs": "装甲",
 	"mmorpg.affix.azure": "天蓝",
-	"mmorpg.affix.chaos_ele_dmg_jewelry": "剧毒",
-	"mmorpg.affix.chaos_ele_mobs": "疾病",
-	"mmorpg.affix.chaos_res": "蛇神的",
+	"mmorpg.affix.boundless": "无界",
+	"mmorpg.affix.chaos_ele_dmg_jewelry": "猛毒之",
+	"mmorpg.affix.chaos_res": "蛇之",
 	"mmorpg.affix.chaos_wep_dmg": "剧毒",
-	"mmorpg.affix.chaos_wep_dmg_dun": "剧毒",
 	"mmorpg.affix.crit_prefix": "致命",
 	"mmorpg.affix.desolation": "荒芜",
-	"mmorpg.affix.energy_reg": "活力",
+	"mmorpg.affix.energetic": "活力",
+	"mmorpg.affix.energy_reg": "激发",
 	"mmorpg.affix.fire_ele_dmg_jewelry": "余烬",
-	"mmorpg.affix.fire_ele_mobs": "余烬",
-	"mmorpg.affix.fire_res": "火龙的",
+	"mmorpg.affix.fire_res": "火龙之",
 	"mmorpg.affix.fire_spell_ele_dmg": "灼烧",
 	"mmorpg.affix.fire_wep_dmg": "灼烧",
-	"mmorpg.affix.fire_wep_dmg_dun": "燃烧",
 	"mmorpg.affix.focused": "专注",
 	"mmorpg.affix.glimmering": "闪烁",
 	"mmorpg.affix.heal_crit_dmg_prefix": "启发",
 	"mmorpg.affix.heal_crit_prefix": "真实",
 	"mmorpg.affix.heal_suff": "恢复",
+	"mmorpg.affix.immortal": "不朽",
 	"mmorpg.affix.item_both_armor": "强化护甲",
 	"mmorpg.affix.item_both_dodge": "鳞片闪避",
 	"mmorpg.affix.item_both_ms": "坚固魔护",
@@ -575,13 +573,13 @@
 	"mmorpg.affix.item_perc_armor": "强化护甲",
 	"mmorpg.affix.item_perc_dodge": "鳞片闪避",
 	"mmorpg.affix.item_perc_ms": "坚固魔护",
-	"mmorpg.affix.life_on_hit_dun": "吸血鬼",
 	"mmorpg.affix.lightning_res": "雪人的",
 	"mmorpg.affix.lightning_spell_ele_dmg": "剧毒",
 	"mmorpg.affix.mana_reg": "抚慰",
 	"mmorpg.affix.mana_thief": "法力小偷的",
 	"mmorpg.affix.ms_reg": "稳定",
 	"mmorpg.affix.of_affluence": "繁荣",
+	"mmorpg.affix.of_azure_skies": "青空之",
 	"mmorpg.affix.of_brutality": "野蛮",
 	"mmorpg.affix.of_consumption": "消耗",
 	"mmorpg.affix.of_devastation": "毁灭",
@@ -600,9 +598,9 @@
 	"mmorpg.affix.of_the_wind": "风之",
 	"mmorpg.affix.of_treasure": "财宝",
 	"mmorpg.affix.of_vampirism": "吸血",
-	"mmorpg.affix.physical_wep_dmg": "暴政",
-	"mmorpg.affix.physical_wep_dmg_dun": "暴政",
+	"mmorpg.affix.physical_wep_dmg": "暴君",
 	"mmorpg.affix.precise": "精准",
+	"mmorpg.affix.promised": "承诺",
 	"mmorpg.affix.scavanger": "拾荒者",
 	"mmorpg.affix.seraphim": "天使的",
 	"mmorpg.affix.strong_dex_armor_suf": "技巧",
@@ -611,11 +609,9 @@
 	"mmorpg.affix.true_hit": "真实命中",
 	"mmorpg.affix.vampiric": "吸血",
 	"mmorpg.affix.water_ele_dmg_jewelry": "冰封",
-	"mmorpg.affix.water_ele_mobs": "寒冰",
 	"mmorpg.affix.water_res": "风暴的",
 	"mmorpg.affix.water_spell_ele_dmg": "冻结",
 	"mmorpg.affix.water_wep_dmg": "冻结",
-	"mmorpg.affix.water_wep_dmg_dun": "冰冻",
 	"mmorpg.affix.wep_item_both": "悲惨",
 	"mmorpg.affix.wep_item_flat": "致命",
 	"mmorpg.affix.wep_item_perc": "残酷",
@@ -623,89 +619,90 @@
 	"_comment": " [CATEGORY]: AFFIXES - NAMES",
 	
 	
-	"_comment": " [CATEGORY]: ONEOFAKIND - NAMES",
-	
-	"mmorpg.one_of_a_kind.arrow_barrage_mod": "箭矢弹幕修饰词",
-	"mmorpg.one_of_a_kind.arrow_storm_mod": "箭矢风暴修饰词",
-	"mmorpg.one_of_a_kind.arrow_totem_mod": "箭矢图腾修饰词",
-	"mmorpg.one_of_a_kind.astral_totem_mod": "星界图腾修饰词",
-	"mmorpg.one_of_a_kind.awaken_mana_mod": "醒来魔力修饰词",
-	"mmorpg.one_of_a_kind.black_hole_mod": "黑洞修饰词",
-	"mmorpg.one_of_a_kind.boomerang_mod": "回旋镖修饰词",
-	"mmorpg.one_of_a_kind.chain_lightning_mod": "链闪电修饰词",
-	"mmorpg.one_of_a_kind.chaos_totem_mod": "混沌图腾修饰词",
-	"mmorpg.one_of_a_kind.charge_mod": "冲锋修饰词",
-	"mmorpg.one_of_a_kind.charged_bolt_mod": "充能箭矢修饰词",
-	"mmorpg.one_of_a_kind.chilling_field_mod": "冰霜领域修饰词",
-	"mmorpg.one_of_a_kind.chilling_touch_mod": "冰寒之触修饰词",
-	"mmorpg.one_of_a_kind.close_nova_mod": "近战新星修饰词",
-	"mmorpg.one_of_a_kind.curse_of_agony_mod": "痛苦诅咒修饰词",
-	"mmorpg.one_of_a_kind.curse_of_despair_mod": "绝望诅咒修饰词",
-	"mmorpg.one_of_a_kind.curse_of_weak_mod": "衰竭诅咒修饰词",
-	"mmorpg.one_of_a_kind.dash_mod": "闪现修饰词",
-	"mmorpg.one_of_a_kind.draconic_blood_mod": "龙血修饰词",
-	"mmorpg.one_of_a_kind.entangling_seed_mod": "缠根种子修饰词",
-	"mmorpg.one_of_a_kind.execute_mod": "处决修饰词",
-	"mmorpg.one_of_a_kind.explosive_arrow_mod": "爆炸箭矢修饰词",
-	"mmorpg.one_of_a_kind.fire_nova_mod": "火焰新星修饰词",
-	"mmorpg.one_of_a_kind.fire_trap_mod": "火焰陷阱修饰词",
-	"mmorpg.one_of_a_kind.fireball_mod": "火球修饰词",
-	"mmorpg.one_of_a_kind.flame_strike_mod": "烈焰打击修饰词",
-	"mmorpg.one_of_a_kind.frost_flower_mod": "寒霜花修饰词",
-	"mmorpg.one_of_a_kind.frost_nova_mod": "冰霜新星修饰词",
-	"mmorpg.one_of_a_kind.frost_trap_mod": "冰霜陷阱修饰词",
-	"mmorpg.one_of_a_kind.frostball_mod": "冰球修饰词",
-	"mmorpg.one_of_a_kind.frozen_orb_mod": "冰封球体修饰词",
-	"mmorpg.one_of_a_kind.gale_wind_mod": "疾风修饰词",
-	"mmorpg.one_of_a_kind.gong_strike_mod": "锣击修饰词",
-	"mmorpg.one_of_a_kind.healing_aura_mod": "治疗光环修饰词",
-	"mmorpg.one_of_a_kind.heart_of_ice_mod": "冰心修饰词",
-	"mmorpg.one_of_a_kind.hunter_potion_mod": "猎手药水修饰词",
-	"mmorpg.one_of_a_kind.ice_comet_mod": "冰之陨星修饰词",
-	"mmorpg.one_of_a_kind.lightning_nova_mod": "闪电新星修饰词",
-	"mmorpg.one_of_a_kind.lightning_spear_mod": "闪电长矛修饰词",
-	"mmorpg.one_of_a_kind.mage_circle_mod": "法阵修饰词",
-	"mmorpg.one_of_a_kind.magma_flower_mod": "熔火兰修饰词",
-	"mmorpg.one_of_a_kind.meteor_arrow_mod": "流星箭修饰词",
-	"mmorpg.one_of_a_kind.meteor_mod": "陨石修饰词",
-	"mmorpg.one_of_a_kind.minion_explosion_mod": "随从爆炸修饰词",
-	"mmorpg.one_of_a_kind.nature_balm_mod": "自然馈赠修饰词",
-	"mmorpg.one_of_a_kind.poison_ball_mod": "毒球修饰词",
-	"mmorpg.one_of_a_kind.poison_cloud_mod": "毒雾修饰词",
-	"mmorpg.one_of_a_kind.poison_trap_mod": "毒素陷阱修饰词",
-	"mmorpg.one_of_a_kind.power_chord_mod": "音爆修饰词",
-	"mmorpg.one_of_a_kind.pull_mod": "拉拽修饰词",
-	"mmorpg.one_of_a_kind.quickdraw_mod": "快手修饰词",
-	"mmorpg.one_of_a_kind.recoil_shot_mod": "后坐力射击修饰词",
-	"mmorpg.one_of_a_kind.refresh_mod": "回复修饰词",
-	"mmorpg.one_of_a_kind.rejuv_totem_mod": "回春图腾修饰词",
-	"mmorpg.one_of_a_kind.resonance_mod": "共鸣修饰词",
-	"mmorpg.one_of_a_kind.return_summons_mod": "召回召唤兽修饰词",
-	"mmorpg.one_of_a_kind.shooting_star_mod": "流星修饰词",
-	"mmorpg.one_of_a_kind.shred_mod": "撕裂修饰词",
-	"mmorpg.one_of_a_kind.smoke_bomb_mod": "烟雾弹修饰词",
-	"mmorpg.one_of_a_kind.song_of_perseverance_mod": "坚定赞歌修饰词",
-	"mmorpg.one_of_a_kind.song_of_valor_mod": "勇气赞歌修饰词",
-	"mmorpg.one_of_a_kind.song_of_vigor_mod": "活力赞歌修饰词",
-	"mmorpg.one_of_a_kind.summon_cold_golem_mod": "召唤冰霜魔像修饰词",
-	"mmorpg.one_of_a_kind.summon_fire_golem_mod": "召唤火焰魔像修饰词",
-	"mmorpg.one_of_a_kind.summon_lightning_golem_mod": "召唤闪电魔像修饰词",
-	"mmorpg.one_of_a_kind.summon_skeleton_army_mod": "召唤骷髅军团修饰词",
-	"mmorpg.one_of_a_kind.summon_spirit_wolf_mod": "召唤幽狼修饰词",
-	"mmorpg.one_of_a_kind.summon_zombie_mod": "召唤僵尸修饰词",
-	"mmorpg.one_of_a_kind.taunt_mod": "嘲讽修饰词",
-	"mmorpg.one_of_a_kind.teleport_mod": "传送修饰词",
-	"mmorpg.one_of_a_kind.test_command_mod": "测试命令修饰词",
-	"mmorpg.one_of_a_kind.test_spell_mod": "毒球修饰词",
-	"mmorpg.one_of_a_kind.thorn_bush_mod": "荆棘灌木修饰词",
-	"mmorpg.one_of_a_kind.tidal_strike_mod": "潮汐打击修饰词",
-	"mmorpg.one_of_a_kind.undying_will_mod": "不死意志修饰词",
-	"mmorpg.one_of_a_kind.vamp_blood_mod": "吸血鬼之血修饰词",
-	"mmorpg.one_of_a_kind.whirlwind_mod": "旋风修饰词",
-	"mmorpg.one_of_a_kind.wish_mod": "祈愿修饰词",
-	
-	"_comment": " [CATEGORY]: ONEOFAKIND - NAMES",
-	
+	"_comment": " [CATEGORY]: TAGS - NAMES",
+
+	"mmorpg.tag.effect.augment": "Augment",
+	"mmorpg.tag.effect.curse": "Curse",
+	"mmorpg.tag.effect.defensive": "Defensive",
+	"mmorpg.tag.effect.food": "Food",
+	"mmorpg.tag.effect.heal_over_time": "Heal over time",
+	"mmorpg.tag.effect.immobilizing": "Immobilizing",
+	"mmorpg.tag.effect.negative": "Negative",
+	"mmorpg.tag.effect.offensive": "Offensive",
+	"mmorpg.tag.effect.positive": "Positive",
+	"mmorpg.tag.effect.song": "Song",
+	"mmorpg.tag.gear_slot.any_jewel": "Any jewel",
+	"mmorpg.tag.gear_slot.armor_family": "Armor family",
+	"mmorpg.tag.gear_slot.armor_stat": "Armor stat",
+	"mmorpg.tag.gear_slot.axe": "Axe",
+	"mmorpg.tag.gear_slot.boots": "Boots",
+	"mmorpg.tag.gear_slot.bow": "Bow",
+	"mmorpg.tag.gear_slot.chest": "Chest",
+	"mmorpg.tag.gear_slot.crafted_jewel_unique": "Crafted jewel unique",
+	"mmorpg.tag.gear_slot.crossbow": "Crossbow",
+	"mmorpg.tag.gear_slot.dexterity": "Dexterity",
+	"mmorpg.tag.gear_slot.dodge_stat": "Dodge stat",
+	"mmorpg.tag.gear_slot.enchantment": "Enchantment",
+	"mmorpg.tag.gear_slot.farming_tool": "Farming tool",
+	"mmorpg.tag.gear_slot.fishing_tool": "Fishing tool",
+	"mmorpg.tag.gear_slot.hammer": "Hammer",
+	"mmorpg.tag.gear_slot.helmet": "Helmet",
+	"mmorpg.tag.gear_slot.husbandry_tool": "Husbandry tool",
+	"mmorpg.tag.gear_slot.intelligence": "Intelligence",
+	"mmorpg.tag.gear_slot.jewel_dex": "Jewel dex",
+	"mmorpg.tag.gear_slot.jewel_int": "Jewel int",
+	"mmorpg.tag.gear_slot.jewel_str": "Jewel str",
+	"mmorpg.tag.gear_slot.jewelry_family": "Jewelry family",
+	"mmorpg.tag.gear_slot.mage_weapon": "Mage weapon",
+	"mmorpg.tag.gear_slot.magic_shield_stat": "Magic shield stat",
+	"mmorpg.tag.gear_slot.melee_weapon": "Melee weapon",
+	"mmorpg.tag.gear_slot.mining_tool": "Mining tool",
+	"mmorpg.tag.gear_slot.necklace": "Necklace",
+	"mmorpg.tag.gear_slot.offhand_family": "Offhand family",
+	"mmorpg.tag.gear_slot.pants": "Pants",
+	"mmorpg.tag.gear_slot.ranged_weapon": "Ranged weapon",
+	"mmorpg.tag.gear_slot.ranger_casting_weapon": "Ranger casting weapon",
+	"mmorpg.tag.gear_slot.ring": "Ring",
+	"mmorpg.tag.gear_slot.shield": "Shield",
+	"mmorpg.tag.gear_slot.spear": "Spear",
+	"mmorpg.tag.gear_slot.staff": "Staff",
+	"mmorpg.tag.gear_slot.strength": "Strength",
+	"mmorpg.tag.gear_slot.sword": "Sword",
+	"mmorpg.tag.gear_slot.tome": "Tome",
+	"mmorpg.tag.gear_slot.tool": "Tool",
+	"mmorpg.tag.gear_slot.totem": "Totem",
+	"mmorpg.tag.gear_slot.weapon_family": "Weapon family",
+	"mmorpg.tag.mob.fire": "Fire",
+	"mmorpg.tag.mob.ranged": "Ranged",
+	"mmorpg.tag.mob.spider": "Spider",
+	"mmorpg.tag.mob.undead": "Undead",
+	"mmorpg.tag.spell.area": "Area",
+	"mmorpg.tag.spell.arrow": "Arrow",
+	"mmorpg.tag.spell.beast": "Beast",
+	"mmorpg.tag.spell.chaining": "Chaining",
+	"mmorpg.tag.spell.curse": "Curse",
+	"mmorpg.tag.spell.damage": "Damage",
+	"mmorpg.tag.spell.golem": "Golem",
+	"mmorpg.tag.spell.has_pet_ability": "Has pet ability",
+	"mmorpg.tag.spell.heal": "Heal",
+	"mmorpg.tag.spell.magic": "Magic",
+	"mmorpg.tag.spell.melee": "Melee",
+	"mmorpg.tag.spell.minion_explode": "Minion explode",
+	"mmorpg.tag.spell.movement": "Movement",
+	"mmorpg.tag.spell.projectile": "Projectile",
+	"mmorpg.tag.spell.ranged": "Ranged",
+	"mmorpg.tag.spell.rejuvenate": "Rejuvenate",
+	"mmorpg.tag.spell.shield": "Shield",
+	"mmorpg.tag.spell.shout": "Shout",
+	"mmorpg.tag.spell.song": "Song",
+	"mmorpg.tag.spell.staff_spell": "Staff spell",
+	"mmorpg.tag.spell.summon": "Summon",
+	"mmorpg.tag.spell.thorns": "Thorns",
+	"mmorpg.tag.spell.totem": "Totem",
+	"mmorpg.tag.spell.trap": "Trap",
+	"mmorpg.tag.spell.weapon_skill": "Weapon skill",
+
+"_comment": " [CATEGORY]: TAGS - NAMES",
 	
 	"_comment": " [CATEGORY]: RARITIES - NAMES",
 	
