--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -120,7 +120,7 @@
 	"mmorpg.chest_type.harvest_purple_chest": "混沌庄园宝箱",
 	"mmorpg.chest_type.map": "地图",
 	"mmorpg.chest_type.rune": "符文",
-	"mmorpg.chest_type.support_gem": "支援宝石",
+	"mmorpg.chest_type.support_gem": "辅助宝石",
 	"_comment": " [CATEGORY]: MISC - NAMES",
 	
 	"mmorpg.gem_rank.chipped": "裂纹的",
@@ -487,57 +487,57 @@
 	"mmorpg.spell.vamp_blood": "吸血鬼之血",
 	"mmorpg.spell.whirlwind": "旋风",
 	"mmorpg.spell.wish": "祈愿",
-	"mmorpg.support_gem.ailment_damage_less_hit_dmg": "异常伤害支援宝石",
-	"mmorpg.support_gem.aoe_dmg": "范围增强支援宝石",
-	"mmorpg.support_gem.bleed_chance": "流血机率支援宝石",
-	"mmorpg.support_gem.burn_chance": "烧伤机率支援宝石",
-	"mmorpg.support_gem.chaos_damage": "混沌伤害支援宝石",
-	"mmorpg.support_gem.chaos_pene": "混沌穿透支援宝石",
-	"mmorpg.support_gem.cold_damage": "冰霜伤害支援宝石",
-	"mmorpg.support_gem.crit_chance": "暴击几率支援宝石",
-	"mmorpg.support_gem.crit_damage": "暴击伤害支援宝石",
-	"mmorpg.support_gem.crit_dmg_less_non_crit_dmg": "自信毁灭支援宝石",
-	"mmorpg.support_gem.dot_damage": "持续伤害支援宝石",
-	"mmorpg.support_gem.effect_duration": "状态持续时间支援宝石",
-	"mmorpg.support_gem.electrify_chance": "感电几率支援宝石",
-	"mmorpg.support_gem.energy_on_hit": "命中获得活力支援宝石",
-	"mmorpg.support_gem.fire_damage": "火焰伤害支援宝石",
-	"mmorpg.support_gem.fire_pene": "火焰穿透支援宝石",
-	"mmorpg.support_gem.freeze_chance": "冰冻几率支援宝石",
-	"mmorpg.support_gem.gmp": "分裂射击4支援宝石",
-	"mmorpg.support_gem.gmp_barrage": "弹幕射击4支援宝石",
+	"mmorpg.support_gem.ailment_damage_less_hit_dmg": "异常伤害辅助宝石",
+	"mmorpg.support_gem.aoe_dmg": "范围增强辅助宝石",
+	"mmorpg.support_gem.bleed_chance": "流血机率辅助宝石",
+	"mmorpg.support_gem.burn_chance": "烧伤机率辅助宝石",
+	"mmorpg.support_gem.chaos_damage": "混沌伤害辅助宝石",
+	"mmorpg.support_gem.chaos_pene": "混沌穿透辅助宝石",
+	"mmorpg.support_gem.cold_damage": "冰霜伤害辅助宝石",
+	"mmorpg.support_gem.crit_chance": "暴击几率辅助宝石",
+	"mmorpg.support_gem.crit_damage": "暴击伤害辅助宝石",
+	"mmorpg.support_gem.crit_dmg_less_non_crit_dmg": "自信毁灭辅助宝石",
+	"mmorpg.support_gem.dot_damage": "持续伤害辅助宝石",
+	"mmorpg.support_gem.effect_duration": "状态持续时间辅助宝石",
+	"mmorpg.support_gem.electrify_chance": "感电几率辅助宝石",
+	"mmorpg.support_gem.energy_on_hit": "命中获得活力辅助宝石",
+	"mmorpg.support_gem.fire_damage": "火焰伤害辅助宝石",
+	"mmorpg.support_gem.fire_pene": "火焰穿透辅助宝石",
+	"mmorpg.support_gem.freeze_chance": "冰冻几率辅助宝石",
+	"mmorpg.support_gem.gmp": "分裂射击4辅助宝石",
+	"mmorpg.support_gem.gmp_barrage": "弹幕射击4辅助宝石",
 	"mmorpg.support_gem.heal_at_low": "及时照料辅助宝石",
-	"mmorpg.support_gem.health_on_hit": "命中获得生命支援宝石",
+	"mmorpg.support_gem.health_on_hit": "命中获得生命辅助宝石",
 	"mmorpg.support_gem.inc_heal": "治疗增强支持宝石",
-	"mmorpg.support_gem.lightning_damage": "闪电伤害支援宝石",
-	"mmorpg.support_gem.lightning_pene": "闪电穿透支援宝石",
-	"mmorpg.support_gem.lmp": "分裂射击2支援宝石",
-	"mmorpg.support_gem.lmp_barrage": "弹幕射击2支援宝石",
-	"mmorpg.support_gem.magic_shield_on_hit": "命中获得魔护支援宝石",
-	"mmorpg.support_gem.mana_on_hit": "命中获得魔力支援宝石",
-	"mmorpg.support_gem.mana_saver_dmg": "魔力保护支援宝石",
-	"mmorpg.support_gem.melee_damage": "近战伤害支援宝石",
-	"mmorpg.support_gem.minion_threat": "召唤物威胁值支援宝石",
-	"mmorpg.support_gem.physical_damage": "物理伤害支援宝石",
-	"mmorpg.support_gem.physical_pene": "物理穿透支援宝石",
-	"mmorpg.support_gem.plus_aoe": "范围扩大支援宝石",
-	"mmorpg.support_gem.poison_chance": "中毒几率支援宝石",
-	"mmorpg.support_gem.proc_freeze": "冰霜触发支援宝石",
-	"mmorpg.support_gem.proc_shock": "感电支援宝石",
-	"mmorpg.support_gem.proj_speed": "弹射物加速支援宝石",
-	"mmorpg.support_gem.ranged_damage": "远程伤害支援宝石",
-	"mmorpg.support_gem.rare_cooldown": "冷却减少支援宝石",
-	"mmorpg.support_gem.rare_mana_eff": "魔力效率支援宝石",
+	"mmorpg.support_gem.lightning_damage": "闪电伤害辅助宝石",
+	"mmorpg.support_gem.lightning_pene": "闪电穿透辅助宝石",
+	"mmorpg.support_gem.lmp": "分裂射击2辅助宝石",
+	"mmorpg.support_gem.lmp_barrage": "弹幕射击2辅助宝石",
+	"mmorpg.support_gem.magic_shield_on_hit": "命中获得魔护辅助宝石",
+	"mmorpg.support_gem.mana_on_hit": "命中获得魔力辅助宝石",
+	"mmorpg.support_gem.mana_saver_dmg": "魔力保护辅助宝石",
+	"mmorpg.support_gem.melee_damage": "近战伤害辅助宝石",
+	"mmorpg.support_gem.minion_threat": "召唤物威胁值辅助宝石",
+	"mmorpg.support_gem.physical_damage": "物理伤害辅助宝石",
+	"mmorpg.support_gem.physical_pene": "物理穿透辅助宝石",
+	"mmorpg.support_gem.plus_aoe": "范围扩大辅助宝石",
+	"mmorpg.support_gem.poison_chance": "中毒几率辅助宝石",
+	"mmorpg.support_gem.proc_freeze": "冰霜触发辅助宝石",
+	"mmorpg.support_gem.proc_shock": "感电辅助宝石",
+	"mmorpg.support_gem.proj_speed": "弹射物加速辅助宝石",
+	"mmorpg.support_gem.ranged_damage": "远程伤害辅助宝石",
+	"mmorpg.support_gem.rare_cooldown": "冷却减少辅助宝石",
+	"mmorpg.support_gem.rare_mana_eff": "魔力效率辅助宝石",
 	"mmorpg.support_gem.small_cdr": "小型冷却缩减辅助宝石",
-	"mmorpg.support_gem.spell_damage": "法术伤害支援宝石",
-	"mmorpg.support_gem.spell_damage_no_crit": "抑制毁灭支援宝石",
-	"mmorpg.support_gem.summon_damage": "召唤伤害支援宝石",
-	"mmorpg.support_gem.summon_duration": "召唤持续时间支援宝石",
-	"mmorpg.support_gem.summon_health": "召唤物生命支援宝石",
-	"mmorpg.support_gem.threat": "威胁值支援宝石",
+	"mmorpg.support_gem.spell_damage": "法术伤害辅助宝石",
+	"mmorpg.support_gem.spell_damage_no_crit": "抑制毁灭辅助宝石",
+	"mmorpg.support_gem.summon_damage": "召唤伤害辅助宝石",
+	"mmorpg.support_gem.summon_duration": "召唤持续时间辅助宝石",
+	"mmorpg.support_gem.summon_health": "召唤物生命辅助宝石",
+	"mmorpg.support_gem.threat": "威胁值辅助宝石",
 	"mmorpg.support_gem.totem_damage": "图腾伤害辅助宝石",
 	"mmorpg.support_gem.totem_dmg_cdr": "图腾准备辅助宝石",
-	"mmorpg.support_gem.water_pene": "冰霜穿透支援宝石",
+	"mmorpg.support_gem.water_pene": "冰霜穿透辅助宝石",
 	
 	"_comment": " [CATEGORY]: SPELLS - NAMES",
 	
@@ -711,12 +711,12 @@
 	"mmorpg.chest_content.currency": "通货",
 	"mmorpg.chest_content.gear": "装备",
 	"mmorpg.chest_content.gem": "宝石",
-	"mmorpg.chest_content.harvest_blue_chest": "Gear From Harvest",
-	"mmorpg.chest_content.harvest_green_chest": "Currency From Harvest",
-	"mmorpg.chest_content.harvest_purple_chest": "Jewel From Harvest",
-	"mmorpg.chest_content.map": "Map",
-	"mmorpg.chest_content.rune": "Rune",
-	"mmorpg.chest_content.support_gem": "Support Gem",
+	"mmorpg.chest_content.harvest_blue_chest": "庄园赛季装备",
+	"mmorpg.chest_content.harvest_green_chest": "庄园赛季通货",
+	"mmorpg.chest_content.harvest_purple_chest": "庄园赛季珠宝",
+	"mmorpg.chest_content.map": "地图",
+	"mmorpg.chest_content.rune": "符文",
+	"mmorpg.chest_content.support_gem": "辅助宝石",
 	
 	"_comment": " [CATEGORY]: LOOTBOXES - NAMES",
 	
