prof is short for profession
Instead of Profane

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -723,17 +723,17 @@
 	
 	"_comment": " [CATEGORY]: GUI - NAMES",
 	
-	"mmorpg.gui.available_support_slots": "Support Slots: %1$s/5 Available",
-	"mmorpg.gui.current_favor": "Current: %1$s",
-	"mmorpg.gui.enchantment_level": "Level: ",
-	"mmorpg.gui.favor_in_gui": " Favor",
-	"mmorpg.gui.favor_per_chest": "\u00A7aGain %1$s per Chest Looted",
-	"mmorpg.gui.favor_per_death": "\u00A7cYou Lose %1$s on Death",
-	"mmorpg.gui.favor_regen_per_hour": "\u00A7dRegenerates %1$s \u00A7dper Hour",
-	"mmorpg.gui.loot_exp_multiplier": "Loot/Exp Multiplier: %1$sx",
-	"mmorpg.gui.mainhub_level": "Level: ",
-	"mmorpg.gui.passive_points": "Passive Points: ",
-	"mmorpg.gui.prof_level_and_exp": "Level: %1$s EXP: %2$s/%3$s",
+	"mmorpg.gui.available_support_slots": "辅助槽位：%1$s/5个可用",
+	"mmorpg.gui.current_favor": "当前：%1$s",
+	"mmorpg.gui.enchantment_level": "等级：",
+	"mmorpg.gui.favor_in_gui": " 恩惠",
+	"mmorpg.gui.favor_per_chest": "\u00A7a每掠夺一个箱子得到%1$s",
+	"mmorpg.gui.favor_per_death": "\u00A7c在死亡时失去%1$s",
+	"mmorpg.gui.favor_regen_per_hour": "\u00A7d每小时恢复%1$s",
+	"mmorpg.gui.loot_exp_multiplier": "战利品/经验值修正：%1$sx",
+	"mmorpg.gui.mainhub_level": "等级：",
+	"mmorpg.gui.passive_points": "被动技能点：",
+	"mmorpg.gui.prof_level_and_exp": "等级：%1$s EXP: %2$s/%3$s",
 	"mmorpg.gui.prof_name": "%1$s: %2$s",
 	"mmorpg.gui.rested_combat_exp": "Rested Combat Exp: ",
 	"mmorpg.gui.rested_prof_exp": "Rested Prof. Exp: ",
